# text-classification-exploration

./: .editorconfig  .gitignore  README.md  config.cfg  exploration.ipynb  metrics.json  pyproject.toml
spacy_model/model-best/: config.cfg  meta.json
spacy_model/model-last/: meta.json
spacy_model/model-last/textcat/: cfg
