[tool.poetry]
name = "text-classification-exploration"
version = "0.1.0"
description = ""
authors = ["Real_Marshal <remarshal@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"
gensim = "^4.3.0"
spacy = "^3.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
